Update ODL RPM spec, docs, helper scripts to SR3
* Also added an uninstall.sh helper script
* Generally cleaned up the README

Change-Id: I9b765640b800b68c33099c6832fb052cfc876ecd
Signed-off-by: Daniel Farrell <dfarrell@redhat.com>